--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span>I</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!-Made by your clasmate :)</span>
+        <span>Aku ada hadiah spesial buat kamu!!-Made by your classmate :)</span>
     </div>
     <div class="button">
         <button>
