--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>B</span>
-        <span>D</span>
-        <span>V</span>
+        <span>A</span>
+        <span>L</span>
+        <span>O</span>
+        <span>,</span>
+        <span>R</span>
+        <span>A</span>
+        <span>Z</span>
         <span>I</span>
-        <span>V</span>
+        <span>Z</span>
+        <span>K</span>
+        <span>A</span>
+        <span>P</span>
+        <span>A</span>
+        <span>R</span>
         <span>I</span>
+        <span>S</span>
+        <span>I</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!-Made by your classmate :)</span>
+        <span>Aku ada hadiah spesial buat kamu!!-Made by Eliezer Kandari</span>
     </div>
     <div class="button">
         <button>
