--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>O</span>
-        <span>,</span>
-        <span>R</span>
-        <span>A</span>
-        <span>Z</span>
+        <span>B</span>
+        <span>D</span>
+        <span>T</span>
+        <span>H</span>
+        <span>E</span>
+        <span>1</span>
+        <span>7</span>
+        <span>T</span>
+        <span>H</span>
+        <span>V</span>
         <span>I</span>
-        <span>Z</span>
-        <span>K</span>
-        <span>A</span>
-        <span>P</span>
-        <span>A</span>
-        <span>R</span>
+        <span>V</span>
         <span>I</span>
-        <span>S</span>
-        <span>I</span>
-        <span>A</span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!-Made by Eliezer Kandari</span>
