--- a/index.html
+++ b/index.html
@@ -14,25 +14,16 @@
         <span>H</span>
         <span>B</span>
         <span>D</span>
-        <span>T</span>
-        <span>H</span>
-        <span>E</span>
-        <span>1</span>
-        <span>7</span>
-        <span>T</span>
-        <span>H</span>
+        <span> </span>
+        <span> </span>
         <span>V</span>
         <span>I</span>
         <span>V</span>
         <span>I</span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!-Made by Eliezer Kandari</span>
+        <span>Aku ada hadiah spesial buat kamu!!-Made by your classmate</span>
     </div>
     <div class="button">
         <button>
