--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>></span>
         <span>H</span>
         <span>B</span>
         <span>D</span>
@@ -20,7 +21,7 @@
         <span>I</span>
         <span>V</span>
         <span>I</span>
-        <
+        <span><</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!-Made by your classmate</span>
