--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,17 +13,13 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>B</span>
-        <span>D</span>
-        <span> </span>
-        <span> </span>
-        <span>V</span>
-        <span>I</span>
-        <span>V</span>
-        <span>I</span>
+        <span>A</span>
+        <span>L</span>
+        <span>L</span>
+        <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!-Made by your classmate</span>
+        <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
     <div class="button">
         <button>
